edited css file

--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
 
 <body>
 
-                <div id="game">
-                  <h1 class="text-center"><strong>Press r, p or s to start playing!</strong></h1>
+                <div class="container" id="game">
+                    <br><br>
+                  <p><strong>Press r, p or s to start playing!</strong></p>
                 </div>
               
      
